plugins {
    id 'java-library'
    id 'application'
    alias libs.plugins.apollo
}

group 'org.rtm516.discordbot'
version '3.0'

repositories {
//    mavenLocal()
    mavenCentral()

    maven {
        url 'https://jitpack.io'
    }

    maven {
        url 'https://repo.opencollab.dev/main'
    }

    maven {
        url 'https://m2.chew.pro/releases/'
    }

    maven {
        url 'https://m2.chew.pro/snapshots/'
    }

    maven {
        url 'https://repo.rtm516.co.uk/main/'
    }
}

dependencies {
    testImplementation libs.junit.jupiter
    testRuntimeOnly libs.junit.launcher

    implementation libs.bundles.jda

    implementation libs.bundles.logging

    // Json for web requests
    implementation libs.json

    implementation libs.bundles.database

    // Pinging java and bedrock servers
    implementation libs.bundles.ping

    implementation libs.reflections
    implementation libs.prettytime
    implementation libs.commonsnet

    // Github API
    implementation libs.github

    // GraphQL
    implementation libs.apollo
}

apollo {
    service("service") {
        packageName.set("com.rtm516.discordbot.graphql")
        generateKotlinModels.set(false)
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    archiveFileName = "${project.name}.jar"

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }

    manifest {
        attributes (
            'Class-Path': configurations.runtimeClasspath.files.collect { it.getName() }.join(' '),
            'Main-Class': 'org.rtm516.discordbot.DiscordBot'
        )
    }
}

// Allow running with `./gradlew run` task
application {
    mainClass = 'org.rtm516.discordbot.DiscordBot'
}

test {
    useJUnitPlatform()
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
